<resources>
    <string name="app_name">LabCalificado2</string>

    <string name="register_fullname">ingresar nombres completos</string>
    <string name="register_email">Ingresar email</string>
    <string name="register_password">Ingresar password</string>
    <string name="register_save">Registrar</string>
    <string name="username_save">Ingrese Username</string>


    <string name="nuevo_usuario">Crear usuario</string>
    <string name="login">Login</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>


    <string name="ingrese_nombre_p">Ingrese Nombre Producto</string>
    <string name="ingrese_precio_p">Ingrese precio de producto</string>
    <string name="ingrese_dec_p">Ingrese descripcion del producto</string>
    <string name="ingrese_img_p">Ingrese nombre de imagen de producto</string>

</resources>
